# mnist-fpga-working

./: README.md  pyproject.toml
2_ukryte/: OVERFLOW_FIX_README.md  README.md  solved_problems_summary.md
2_ukryte/inference/: README.md
2_ukryte/notebooks/: README.md  siec_2_ukryte.ipynb  siec_INT8.ipynb
2_ukryte/outputs/: README.md
2_ukryte/python/: README.md  export_weights.py  send_weights.py  siec_2_ukryte.py  siec_int8.py
2_ukryte/testing/: compare_python_vs_fpga.py  debug_quantized_inference.py  generate_test_vectors.py  python_test_model.py  send_1_pixel.py  test_fpga_accuracy.py
2_ukryte/training/: siec_2_ukryte.py
2_ukryte/utils/: read_scores.py  send_image.py  send_weights.py
cnn/: ACADEMIC_REFERENCES.md  PROJECT_DOCUMENTATION.md  README.md
cnn/testing/: check_mem_files.py  compare_fpga_vs_python.py  generate_cnn_vectors.py  testing_python_model.py
cnn/utils/: send_image.py  send_weights.py
data/: norm_mean.npy  norm_std.npy  scale_info.txt
le-net/: .gitignore  LENET_CHANGES.md
le-net/data/: scale_info.txt
le-net/outputs/: mnist_cnn.onnx  mnist_cnn.pth
le-net/python/: le_net.py  send_image.py  send_weights.py  test_all_images.py  test_model.py
le-net/testing/: compare_fpga_vs_python.py  generate_lenet_vectors.py  tanh_lut_loader.py  test_fpga_response.py  testing_python_model.py
le-net/training/: train_lenet.py
le-net/utils/: send_weights.py
le-net/verilog/: inference.v  load_weights.v  pins.v
regresja/: README.md
regresja/data/: README.md
shared/: README.md  convert_to_binary.py
test_images/: README.md
(+105 files in other folders)
